bin_PROGRAMS = visualgit
visualgit_CPPFLAGS = $(WX_CPPFLAGS)
visualgit_LDADD = $(WX_LIBS)
visualgit_SOURCES = app.cpp \
                    app.h \
                    mainframe.cpp \
                    mainframe.h \
                    pch.cpp \
                    pch.h \
                    target.h
